--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,4 @@
-# Core dependencies
 streamlit
 openai
 python-dotenv
-
-# Date and time handling
-python-dateutil
-
-# Type hints support
-typing-extensions
-
-# JSON handling
-jsonschema
-
-# Optional but recommended for better performance
-streamlit-extras
+datetime
